2
Checking Implementation/main.c ...
1/21 files checked 1% done
Checking Implementation/src/baseconversion.c ...
2/21 files checked 3% done
Checking Implementation/src/calculator_operations.c ...
Implementation/src/calculator_operations.c:16:13: error: Uninitialized variable: calculator_operand1 [uninitvar]
            calculator_operand1,
            ^
Implementation/src/calculator_operations.c:17:13: error: Uninitialized variable: calculator_operand2 [uninitvar]
            calculator_operand2,
            ^
Implementation/src/calculator_operations.c:18:17: error: Uninitialized variable: calculator_operand1 [uninitvar]
            add(calculator_operand1, calculator_operand2));
                ^
Implementation/src/calculator_operations.c:18:38: error: Uninitialized variable: calculator_operand2 [uninitvar]
            add(calculator_operand1, calculator_operand2));
                                     ^
Implementation/src/calculator_operations.c:22:13: error: Uninitialized variable: calculator_operand1 [uninitvar]
            calculator_operand1,
            ^
Implementation/src/calculator_operations.c:23:13: error: Uninitialized variable: calculator_operand2 [uninitvar]
            calculator_operand2,
            ^
Implementation/src/calculator_operations.c:24:22: error: Uninitialized variable: calculator_operand1 [uninitvar]
            subtract(calculator_operand1, calculator_operand2));
                     ^
Implementation/src/calculator_operations.c:24:43: error: Uninitialized variable: calculator_operand2 [uninitvar]
            subtract(calculator_operand1, calculator_operand2));
                                          ^
Implementation/src/calculator_operations.c:28:13: error: Uninitialized variable: calculator_operand1 [uninitvar]
            calculator_operand1,
            ^
Implementation/src/calculator_operations.c:29:13: error: Uninitialized variable: calculator_operand2 [uninitvar]
            calculator_operand2,
            ^
Implementation/src/calculator_operations.c:30:22: error: Uninitialized variable: calculator_operand1 [uninitvar]
            multiply(calculator_operand1, calculator_operand2));
                     ^
Implementation/src/calculator_operations.c:30:43: error: Uninitialized variable: calculator_operand2 [uninitvar]
            multiply(calculator_operand1, calculator_operand2));
                                          ^
Implementation/src/calculator_operations.c:34:13: error: Uninitialized variable: calculator_operand1 [uninitvar]
            calculator_operand1,
            ^
Implementation/src/calculator_operations.c:35:13: error: Uninitialized variable: calculator_operand2 [uninitvar]
            calculator_operand2,
            ^
Implementation/src/calculator_operations.c:36:20: error: Uninitialized variable: calculator_operand1 [uninitvar]
            divide(calculator_operand1, calculator_operand2));
                   ^
Implementation/src/calculator_operations.c:36:41: error: Uninitialized variable: calculator_operand2 [uninitvar]
            divide(calculator_operand1, calculator_operand2));
                                        ^
Implementation/src/calculator_operations.c:47:12: error: Uninitialized variable: calculator_operand1 [uninitvar]
    return(calculator_operand1+calculator_operand2);
           ^
Implementation/src/calculator_operations.c:18:17: note: Calling function 'add', 1st argument 'calculator_operand1' value is <Uninit>
            add(calculator_operand1, calculator_operand2));
                ^
Implementation/src/calculator_operations.c:47:12: note: Uninitialized variable: calculator_operand1
    return(calculator_operand1+calculator_operand2);
           ^
Implementation/src/calculator_operations.c:51:12: error: Uninitialized variable: calculator_operand1 [uninitvar]
    return(calculator_operand1-calculator_operand2);
           ^
Implementation/src/calculator_operations.c:24:22: note: Calling function 'subtract', 1st argument 'calculator_operand1' value is <Uninit>
            subtract(calculator_operand1, calculator_operand2));
                     ^
Implementation/src/calculator_operations.c:51:12: note: Uninitialized variable: calculator_operand1
    return(calculator_operand1-calculator_operand2);
           ^
Implementation/src/calculator_operations.c:55:12: error: Uninitialized variable: calculator_operand1 [uninitvar]
    return(calculator_operand1*calculator_operand2);
           ^
Implementation/src/calculator_operations.c:30:22: note: Calling function 'multiply', 1st argument 'calculator_operand1' value is <Uninit>
            multiply(calculator_operand1, calculator_operand2));
                     ^
Implementation/src/calculator_operations.c:55:12: note: Uninitialized variable: calculator_operand1
    return(calculator_operand1*calculator_operand2);
           ^
Implementation/src/calculator_operations.c:59:12: error: Uninitialized variable: calculator_operand1 [uninitvar]
    return(calculator_operand1/calculator_operand2);
           ^
Implementation/src/calculator_operations.c:36:20: note: Calling function 'divide', 1st argument 'calculator_operand1' value is <Uninit>
            divide(calculator_operand1, calculator_operand2));
                   ^
Implementation/src/calculator_operations.c:59:12: note: Uninitialized variable: calculator_operand1
    return(calculator_operand1/calculator_operand2);
           ^
3/21 files checked 5% done
Checking Implementation/src/exponential.c ...
4/21 files checked 6% done
Checking Implementation/src/logicalfunctions.c ...
5/21 files checked 8% done
Checking Implementation/src/quadratic.c ...
6/21 files checked 10% done
Checking Implementation/src/reverse.c ...
7/21 files checked 12% done
Checking Implementation/src/statitics.c ...
8/21 files checked 14% done
Checking Implementation/src/trignometry.c ...
9/21 files checked 16% done
Checking Implementation/src/unitconversion.c ...
10/21 files checked 18% done
Checking Implementation/test/test_baseconversion.c ...
11/21 files checked 19% done
Checking Implementation/test/test_calculator_operations.c ...
12/21 files checked 20% done
Checking Implementation/test/test_exponential.c ...
13/21 files checked 21% done
Checking Implementation/test/test_logicaunit.c ...
14/21 files checked 22% done
Checking Implementation/test/test_main.c ...
15/21 files checked 22% done
Checking Implementation/test/test_quadratic.c ...
16/21 files checked 23% done
Checking Implementation/test/test_revers.c ...
17/21 files checked 24% done
Checking Implementation/test/test_statistics.c ...
18/21 files checked 24% done
Checking Implementation/test/test_trignometry.c ...
19/21 files checked 25% done
Checking Implementation/test/test_unitconver.c ...
20/21 files checked 26% done
Checking Implementation/unity/unity.c ...
Checking Implementation/unity/unity.c: AVR...
Checking Implementation/unity/unity.c: CMOCK...
Checking Implementation/unity/unity.c: RUN_TEST...
Checking Implementation/unity/unity.c: UINTPTR_MAX...
Checking Implementation/unity/unity.c: UNITY_CLOCK_MS;UNITY_EXEC_TIME_START;UNITY_EXEC_TIME_STOP;UNITY_PRINT_EXEC_TIME;UNITY_TIME_TYPE;UNITY_INCLUDE_EXEC_TIME...
Checking Implementation/unity/unity.c: UNITY_DIFFERENTIATE_FINAL_FAIL...
Checking Implementation/unity/unity.c: UNITY_EXCLUDE_DETAILS...
Checking Implementation/unity/unity.c: UNITY_EXCLUDE_FLOAT...
Checking Implementation/unity/unity.c: UNITY_EXCLUDE_FLOAT_PRINT...
Checking Implementation/unity/unity.c: UNITY_EXCLUDE_SETJMP_H...
Checking Implementation/unity/unity.c: UNITY_EXEC_TIME_START;UNITY_EXEC_TIME_STOP;UNITY_PRINT_EXEC_TIME;UNITY_TIME_TYPE;UNITY_INCLUDE_EXEC_TIME...
21/21 files checked 100% done
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

